--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-body {
+* {
     margin: 0;
     padding: 0;
 }
@@ -125,24 +125,56 @@ body {
                 border-bottom: 1px solid grey;
  
                 .searchForm {
+                    padding: 10px;
  
                     input {
- 
+                         outline: none;
+                         border: none;
+                         background-color: transparent;
+                         color: white;
+
+                         &::placeholder {
+                            color: lightgray;
+                         }
                       }
                 }  
             }
             .userChat {
-                     
+                color: white;
+                padding: 10px;
+                align-items: center;
+                display: flex;
+                gap: 10px;
+                cursor: pointer;
+                
+                &:hover {
+                    background-color: #2f2d52;
+
+                }
                 img {
                 width: 50px;
                 height: 50px;   
                 border-radius: 50%;
                 object-fit: cover;   
                 }
+                .userChatInfo {
+                    span{
+                        font-size: 18px;
+                        font-weight: 500;
+                    }
+                    p {
+                        color: lightgrey;
+                        font-size: 14px;
+                    }
+                }
             }    
         }
             .chat {
                 flex: 2;
+
+                .chatInfo {
+                    display: flex;
+                }
             }
         }
     }
