--- a/src/style.scss
+++ b/src/style.scss
@@ -174,6 +174,109 @@
 
                 .chatInfo {
                     display: flex;
+                    height: 50px;
+                    justify-content: space-between;
+                    align-items: center;
+                    background-color: #5d5b8d;
+                    padding: 10px;
+                    color: lightgray;
+
+                    .chatIcons {
+                        display: flex;
+                        gap: 20px; 
+                        img {
+                            height: 20px;
+                            width: 20px;
+                        }
+                    }
+                }
+                .messages {
+                    background-color: #ddddf7;
+                    padding: 10px;
+                    height:  calc(100% - 160px);
+                    overflow: scroll;
+                    -ms-overflow-style: none;
+                    scrollbar-width: none;
+
+                    .message {
+                        display: flex;
+                        gap: 20px;
+                        
+
+                        .messageInfo {
+                            display: flex;
+                            flex-direction: column;
+                            font-weight: 300;
+                            color: gray;
+                            
+                            img {
+                                height: 50px;
+                                width: 50px;
+                                object-fit: cover;
+                                border-radius: 50%;
+
+                            }
+                        }
+                        .messageContent{
+                                max-width: 80%;
+                                display: flex;
+                                flex-direction: column;
+                                gap: 10px;
+
+                                p {
+                                    background-color: #fff;
+                                    padding: 10px 20px;
+                                    border-radius: 0 10px 10px 10px;
+                                }
+                           
+                            img {
+                                width: 50px;
+                                height: 50px;
+                                object-fit: cover;
+                                border-radius: 50%;
+                            }
+                        }
+                    }
+                }
+
+                .input {
+                    height: 50px;
+                    background-color: white;
+                    padding: 10px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    input {
+                        width: 100%;
+                        border: none;
+                        outline: none;
+                        color: #2f2d52;
+                        font-size: 18px;
+
+                        &::placeholder {
+                            color: lightgray;
+                         
+                        }
+                    }
+                    .send {
+                        display: flex;
+                        gap: 15px;
+                        align-items: center;
+
+                        img {
+                            height: 30px;
+                            width: 30px;
+                            cursor: pointer;
+                        }
+                        button {
+                            border: none;
+                            background-color: #8da4f1;
+                            color: white;
+                            cursor: pointer;
+                            padding: 10px 15px;
+                        }
+                    }
                 }
             }
         }
