--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,19 @@
+@mixin mobile {
+    @media screen and (max-width: 480px) {
+        @content
+    }   
+}
+@mixin tablet {
+    @media screen and (max-width: 768px) {
+        @content
+    }   
+}
+@mixin laptop {
+    @media screen and (max-width: 1200px) {
+        @content
+    }   
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -21,6 +37,7 @@
             color: #5d5b8d;
             font-weight: bold;
             font-size: 24px;
+           
         }
         .title {
             color: #5d5b8d;
@@ -77,10 +94,14 @@
             border: 1px solid white;
             border-radius: 10px;
             overflow: hidden;
+            @include tablet {
+                width: 90%;
+            }
 
             .sidebar {
                 flex: 1;
                 background-color: #3e3c61;
+                position: relative;
 
                 .navbar {
                     display: flex;
@@ -93,6 +114,9 @@
 
                     .logo {
                         font-weight: bold;
+                        @include tablet {
+                            display: none;
+                        }
                     }
                     .user {
                         display: flex;
@@ -115,6 +139,10 @@
                         font-size: 13px;
                         border: none;
                         cursor: pointer;
+                        @include tablet {
+                            position: absolute;
+                            bottom: 10px;
+                        }
                         }
                 
                     } 
@@ -201,7 +229,7 @@
                     .message {
                         display: flex;
                         gap: 20px;
-                        
+                        margin-bottom: 20px;
 
                         .messageInfo {
                             display: flex;
@@ -227,13 +255,26 @@
                                     background-color: #fff;
                                     padding: 10px 20px;
                                     border-radius: 0 10px 10px 10px;
+                                    max-width: max-content;
                                 }
                            
                             img {
-                                width: 50px;
-                                height: 50px;
-                                object-fit: cover;
-                                border-radius: 50%;
+                                width: 50%;
+                                
+                            }
+                        }
+
+                        &.owner {
+                            flex-direction: row-reverse;
+                             
+                            .messageContent {
+                                align-items: flex-end;
+
+                                p {
+                                    background-color: #8da4f1;
+                                    color: white;
+                                    border-radius: 10px 0 10px 10px;
+                                }
                             }
                         }
                     }
